Amend styling for versus container for spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,6 +280,7 @@ footer {
         height: 75px;
         width: 100%;
         flex-direction: row;
+        justify-content: space-evenly;
     }
 
     .choice-img {
